<resources>
    <string name="app_name">Modulotech</string>

    <!--region fragment_devices-->
    <string name="fragment_devices_title">Devices</string>
    <!--endregion -->

    <!--region fragment_heater_steering-->
    <string name="fragment_heater_steering_mode">Mode</string>
    <string name="fragment_heater_steering_temperature">Temperature</string>
    <string name="fragment_heater_steering_save">Save</string>
    <!--endregion -->

    <!--region fragment_light_steering-->
    <string name="fragment_light_steering_mode">Mode</string>
    <string name="fragment_light_steering_intensity">Intensity</string>
    <string name="fragment_light_steering_save">Save</string>
    <!--endregion -->

    <!--region fragment_roller_shutter_steering-->
    <string name="fragment_roller_shutter_position">Position</string>
    <string name="fragment_roller_shutter_save">Save</string>
    <!--endregion -->

    <!--region fragment_profile-->
    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_profile_name">Name</string>
    <string name="fragment_profile_date_of_birth">Date of birth</string>
    <string name="fragment_profile_country">Country</string>
    <string name="fragment_profile_city">City</string>
    <string name="fragment_profile_address">Address</string>
    <string name="fragment_profile_postal_code">Postal code</string>
    <!--endregion -->

    <!--region fragment_profile_edit-->
    <string name="fragment_profile_edit_title">Edit profile</string>
    <string name="fragment_profile_edit_first_name">First name</string>
    <string name="fragment_profile_edit_last_name">Last name</string>
    <string name="fragment_profile_edit_date_of_birth">Date of birth</string>
    <string name="fragment_profile_edit_country">Country</string>
    <string name="fragment_profile_edit_city">City</string>
    <string name="fragment_profile_edit_street">Street</string>
    <string name="fragment_profile_edit_street_code">Street code</string>
    <string name="fragment_profile_edit_postal_code">Postal code</string>
    <string name="fragment_profile_edit_error_empty_text">The field cannot be empty</string>
    <string name="fragment_profile_edit_error_date_format">The field must be in %1s format</string>
    <!--endregion -->

    <!--region item_device_filter-->
    <string name="item_device_filter_light">Light</string>
    <string name="item_device_filter_heater">Heater</string>
    <string name="item_device_filter_roller_shutter">Roller Shutter</string>
    <!--endregion -->

    <!--region item_light-->
    <string name="item_light_name">Light</string>
    <string name="item_light_intensity">Intensity</string>
    <string name="item_light_mode_on">On</string>
    <string name="item_light_mode_off">Off</string>
    <!--endregion -->

    <!--region item_heater-->
    <string name="item_heater_name">Heater</string>
    <string name="item_heater_temperature">Temperature</string>
    <string name="item_heater_mode_on">On</string>
    <string name="item_heater_mode_off">Off</string>
    <!--endregion -->

    <!--region item_roller_shutter-->
    <string name="item_roller_shutter_name">Roller Shutter</string>
    <string name="item_roller_shutter_position">Position</string>
    <!--endregion -->

    <!--region layout_server_error-->
    <string name="layout_server_error_title">Failed to load the data from a server</string>
    <string name="layout_server_error_retry">Retry</string>
    <!--endregion -->

    <!--region activity_main_menu-->
    <string name="activity_main_menu_action_home">Home</string>
    <string name="activity_main_menu_action_profile">Profile</string>
    <!--endregion -->

    <!--region fragment_devices_menu-->
    <string name="fragment_devices_menu_action_filter">Filter</string>
    <!--endregion -->

    <!--region fragment_edit_profile_menu-->
    <string name="fragment_edit_profile_action_submit">Submit</string>
    <!--endregion -->

    <!--region fragment_profile_menu-->
    <string name="fragment_profile_menu_action_edit">Edit</string>
    <!--endregion -->
</resources>